# W11Tiles

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
crates/tile-core/: Cargo.toml
crates/tile-core/src/: animator.rs  config.rs  direction.rs  geom.rs  ipc.rs  layout.rs  lib.rs  state.rs  window.rs  workspace.rs
crates/tile-daemon/: Cargo.toml
crates/tile-daemon/src/: main.rs
crates/tile-win/: Cargo.toml
crates/tile-win/src/: applier.rs  dpi.rs  drop_zones.rs  dwm_polish.rs  hook.rs  hotkey.rs  hwnd_map.rs  icon.rs  ipc_server.rs  keyboard_hook.rs  lib.rs  manageable.rs  monitors.rs  shortcuts_dialog.rs  tab_strip.rs  tray.rs  vdesktop.rs
crates/tilectl/: Cargo.toml
crates/tilectl/src/: main.rs
installer/: build-msi.ps1  sign.ps1
installer/wix/: License.rtf  W11Tiles.wxs
