[workspace]
resolver = "2"
members = [
    "crates/tile-core",
    "crates/tile-win",
    "crates/tile-daemon",
    "crates/tilectl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"
authors = ["TileManager contributors"]

[workspace.dependencies]
tile-core = { path = "crates/tile-core" }
tile-win  = { path = "crates/tile-win" }

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
thiserror   = "1"
anyhow      = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "sync", "time"] }
clap        = { version = "4", features = ["derive"] }

[workspace.dependencies.windows]
version  = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
]

[profile.release]
lto         = "thin"
codegen-units = 1
panic       = "abort"
strip       = true

[profile.dev]
opt-level = 1
