[package]
name        = "tile-core"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
authors.workspace     = true
description = "Pure layout engine and window-state model for TileManager. No Windows APIs."

[dependencies]
serde       = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }

[dev-dependencies]
serde_json  = { workspace = true }
