[package]
name        = "tile-daemon"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
description = "TileManager daemon — long-running orchestrator process."
default-run = "tile-daemon"

[[bin]]
name = "tile-daemon"
path = "src/main.rs"

[dependencies]
tile-core   = { workspace = true }
tile-win    = { workspace = true }
windows     = { workspace = true }

anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
tokio       = { workspace = true }
