[package]
name        = "tilectl"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
description = "TileManager command-line: query and control the daemon over a named pipe."

[[bin]]
name = "tilectl"
path = "src/main.rs"

[dependencies]
tile-core   = { workspace = true }
anyhow      = { workspace = true }
clap        = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
